:fix: Add labels and selectors for postgresql
Signed-off-by: etheleon <picy2k@gmail.com>

--- a/manifests/kustomize/base/cache-deployer/cache-deployer-deployment.yaml
+++ b/manifests/kustomize/base/cache-deployer/cache-deployer-deployment.yaml
@@ -4,10 +4,12 @@ metadata:
   name: cache-deployer-deployment
   labels:
     app: cache-deployer
+    application-crd-id: kubeflow-pipelines
 spec:
   replicas: 1
   selector:
     matchLabels:
+      application-crd-id: kubeflow-pipelines
       app: cache-deployer
   strategy:
     type: Recreate
