--- a/manifests/kustomize/base/installs/generic/postgres/postgres-secret-extended.yaml
+++ b/manifests/kustomize/base/installs/generic/postgres/postgres-secret-extended.yaml
@@ -2,6 +2,8 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: postgres-secret-extended
+  labels:
+    application-crd-id: kubeflow-pipelines
 stringData:
   username: user
   password: "password"
