:wrench: Replace commonLabels with labels and selectors
Used `kustomize edit fix  --vars`

Signed-off-by: etheleon <picy2k@gmail.com>

--- a/manifests/kustomize/env/aws/kustomization.yaml
+++ b/manifests/kustomize/env/aws/kustomization.yaml
@@ -30,5 +30,7 @@ patches:
 # Identifier for application manager to apply ownerReference.
 # The ownerReference ensures the resources get garbage collected
 # when application is deleted.
-commonLabels:
-  application-crd-id: kubeflow-pipelines
+labels:
+- includeSelectors: true
+  pairs:
+    application-crd-id: kubeflow-pipelines
