--- a/manifests/kustomize/base/cache-deployer/kustomization.yaml
+++ b/manifests/kustomize/base/cache-deployer/kustomization.yaml
@@ -4,8 +4,10 @@ resources:
   - cache-deployer-role.yaml
   - cache-deployer-rolebinding.yaml
   - cache-deployer-deployment.yaml
-commonLabels:
-  app: cache-deployer
 images:
   - name: gcr.io/ml-pipeline/cache-deployer
     newTag: 2.3.0
+labels:
+  - includeSelectors: true
+    pairs:
+      app: cache-deployer
