--- a/manifests/kustomize/base/installs/multi-user/pipelines-profile-controller/kustomization.yaml
+++ b/manifests/kustomize/base/installs/multi-user/pipelines-profile-controller/kustomization.yaml
@@ -1,8 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: kubeflow
-commonLabels:
-  app: kubeflow-pipelines-profile-controller
 resources:
 - service.yaml
 - deployment.yaml
@@ -13,4 +11,8 @@ configMapGenerator:
   - sync.py
 - name: kubeflow-pipelines-profile-controller-env
   envs:
-  - params.env
+    - params.env
+labels:
+- includeSelectors: true
+  pairs:
+    app: kubeflow-pipelines-profile-controller
