--- a/manifests/kustomize/env/azure/kustomization.yaml
+++ b/manifests/kustomize/env/azure/kustomization.yaml
@@ -21,5 +21,7 @@ secretGenerator:
 # Identifier for application manager to apply ownerReference.
 # The ownerReference ensures the resources get garbage collected
 # when application is deleted.
-commonLabels:
-  application-crd-id: kubeflow-pipelines
+labels:
+- includeSelectors: true
+  pairs:
+    application-crd-id: kubeflow-pipelines
