--- a/manifests/kustomize/env/dev/kustomization.yaml
+++ b/manifests/kustomize/env/dev/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-resources:
   # Application controller is used to provide Google Cloud Console integration.
+resources:
   - ../../third-party/application
   - ../../base/application
   - ../platform-agnostic
@@ -11,9 +11,11 @@ resources:
 # Identifier for application manager to apply ownerReference.
 # The ownerReference ensures the resources get garbage collected
 # when application is deleted.
-commonLabels:
-  application-crd-id: kubeflow-pipelines
 
 # !!! If you want to customize the namespace,
 # please refer sample/cluster-scoped-resources to update the namespace for cluster-scoped-resources
 namespace: kubeflow
+labels:
+- includeSelectors: true
+  pairs:
+    application-crd-id: kubeflow-pipelines
