--- a/manifests/kustomize/env/gcp/kustomization.yaml
+++ b/manifests/kustomize/env/gcp/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-resources:
   # Application controller is used to provide Google Cloud Console integration.
+resources:
   - ../../third-party/application
   - ../../base/application
   - ../../base/installs/generic
@@ -15,8 +15,6 @@ resources:
 # Identifier for application manager to apply ownerReference.
 # The ownerReference ensures the resources get garbage collected
 # when application is deleted.
-commonLabels:
-  application-crd-id: kubeflow-pipelines
 
 # !!! If you want to customize the namespace,
 # please also update base/cache-deployer/cluster-scoped/cache-deployer-clusterrolebinding.yaml
@@ -30,3 +28,7 @@ configMapGenerator:
   - name: pipeline-install-config
     env: params.env
     behavior: merge
+labels:
+- includeSelectors: true
+  pairs:
+    application-crd-id: kubeflow-pipelines
