--- a/manifests/kustomize/env/platform-agnostic-multi-user-legacy/kustomization.yaml
+++ b/manifests/kustomize/env/platform-agnostic-multi-user-legacy/kustomization.yaml
@@ -15,9 +15,11 @@ resources:
 # Identifier for application manager to apply ownerReference.
 # The ownerReference ensures the resources get garbage collected
 # when application is deleted.
-commonLabels:
-  application-crd-id: kubeflow-pipelines
 
 # !!! If you want to customize the namespace,
 # please also update base/cache-deployer/cluster-scoped/cache-deployer-clusterrolebinding.yaml
 namespace: kubeflow
+labels:
+- includeSelectors: true
+  pairs:
+    application-crd-id: kubeflow-pipelines
