--- a/manifests/kustomize/sample/kustomization.yaml
+++ b/manifests/kustomize/sample/kustomization.yaml
@@ -14,8 +14,6 @@ resources:
 # Identifier for application manager to apply ownerReference.
 # The ownerReference ensures the resources get garbage collected
 # when application is deleted.
-commonLabels:
-  application-crd-id: kubeflow-pipelines
 
 # Used by Kustomize
 configMapGenerator:
@@ -36,3 +34,9 @@ namespace: kubeflow
 # 2. Change values in params-db-secret.env file for CloudSQL username and password
 # 3. kustomize build ./ | kubectl apply -f -
 ####
+labels:
+  - includeSelectors: true
+    pairs:
+      application-crd-id: kubeflow-pipelines
+
+
